fixed CTA Button spacing on mobile, added Cards responsiveness

--- a/assets/styles/components/call-to-action.scss
+++ b/assets/styles/components/call-to-action.scss
@@ -19,7 +19,7 @@
         align-items: flex-start;
         gap: 24px;
         padding: 0px 32px;
-        
+
     }
 
     &__content {
@@ -30,7 +30,14 @@
         flex-wrap: wrap;
         flex: 1.962;
 
+        @media only screen and (max-width: 600px) and (min-width: 300px) {
+             margin-left: 3rem;
+        }
 
+        @media screen and (max-width: 325px) {
+            margin-left: 6rem;
+
+        }
 
 
         &-left {
@@ -38,6 +45,8 @@
             flex-direction: column;
             gap: 24px;
             padding: 0px;
+
+
         }
 
         &-heading {
@@ -51,6 +60,16 @@
             @include typography("text lg");
             color: $color-neutrals-900;
             align-self: stretch;
+
+            @media screen and (max-width: 521px) {
+                max-width: 375px;
+
+            }
+
+            @media screen and (max-width: 325px) {
+                max-width: 362px;
+
+            }
         }
 
 
@@ -66,7 +85,7 @@
             height: 44px;
             background-color: transparent;
             border-radius: 8px;
-           
+
 
             border: 1px solid $color-neutrals-300;
             cursor: pointer;
@@ -75,7 +94,7 @@
                 border: 1px solid $color-neutrals-400;
             }
 
-            &:active{
+            &:active {
                 border: 1px solid $color-neutrals-500;
                 transform: translateY(0.5px);
             }
@@ -95,7 +114,7 @@
             color: $color-neutrals-700;
 
             &:hover {
-              color: $color-neutrals-900;
+                color: $color-neutrals-900;
             }
 
             &:focus {
@@ -113,9 +132,12 @@
             width: 20px;
             height: 20px;
 
-         
+
         }
 
     }
 
+    @media screen and (max-width: 521px) {
+        margin-bottom: 5rem;
+    }
 }
