--- a/assets/styles/components/listing.scss
+++ b/assets/styles/components/listing.scss
@@ -37,28 +37,35 @@
 
 .card {
     display: flex;
-    flex-direction: column;
     position: relative;
     
+    max-width: 389px;
+    height: auto;
+
+    @media screen and (max-width: 425px) {
+        max-width: 348px;
+      }
+
+
     &__media {
-        width: 389px;
-        height: 480px;
+
+        object-fit: cover;
+        aspect-ratio: 159.1/200;
         position: relative;
-        display: inline-block;
         overflow: hidden;
         margin: 0;
         border-radius: 8px;
-            
-        
+
+
 
         &-image {
             display: block;
             min-width: 100%;
             min-height: 100%;
             transition: transform 0.3s;
-            
+
         }
-        
+
     }
 
     &__body {
@@ -68,8 +75,6 @@
         padding: 48px 24px 24px;
         gap: 12px;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-
-
 
         position: absolute;
         height: 197px;
@@ -82,7 +87,7 @@
 
         &-label {
             @include typography('label sm');
-            color: $color-secondary-700;
+            color: token(color,secondary,700);
             background: $color-secondary-100;
             padding: 4px;
             border-radius: 4px;
@@ -111,27 +116,27 @@
 
         }
 
-    
+
         &-location::before {
             content: url("../icons/map-pin.svg");
             display: inline-block;
-            vertical-align: middle; 
+            vertical-align: middle;
             margin-right: 5px;
             font-size: 1.2rem;
-          }
-        
-          &-location {
+        }
+
+        &-location {
             @include typography('label sm');
             display: flex;
             align-items: center;
-          }
-          
-        
-        
+        }
+
+
+
 
     }
 
-    &:hover img  { 
-        transform : scale(1.25);
-       }
+    &:hover img {
+        transform: scale(1.25);
+    }
 }
